# image_extender

./: .gitignore  CMakeLists.txt  README.md  extend_canvas.cpp  matte_generator  matte_generator.cpp
.github/workflows/: ci.yml
apps/extend_canvas_cli/: CMakeLists.txt  extend_canvas_cli.cpp
apps/matte_generator/: CMakeLists.txt  matte_generator.cpp
extend_canvas_ui/: CMakeLists.txt  extend_canvas_cli
extend_canvas_ui/src/: MainWindow.cpp  MainWindow.hpp  extend_canvas  extend_canvas.cpp  extend_canvas.hpp  main.cpp
extend_canvas_ui/src/models/: ImageSettings.hpp
extend_canvas_ui/src/panels/: ControlPanel.cpp  ControlPanel.hpp  PreviewPanel.cpp  PreviewPanel.hpp
extend_canvas_ui/src/widgets/: BatchListWidget.cpp  BatchListWidget.hpp  DropLabel.cpp  DropLabel.hpp
extend_canvas_wx/: CMakeLists.txt
extend_canvas_wx/src/: WxControlPanel.cpp  WxControlPanel.hpp  WxMainFrame.cpp  WxMainFrame.hpp  WxPreviewPanel.cpp  WxPreviewPanel.hpp  wxMain.cpp
scripts/: README.md  sam2_vehicle_mask.py
shared/extend_canvas/: extend_canvas.cpp  extend_canvas.hpp
shared/include/models/: ImageSettings.hpp  MaskSettings.hpp  ProcessingMode.hpp
shared/include/util/: ImageOps.hpp
shared/util/: ImageOps.cpp
shared/vehicle_mask/: vehicle_mask.cpp  vehicle_mask.hpp
